--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -6,7 +6,7 @@ QUIET =
 NAME = 		ex04
 INCLUDES =	./includes
 CC = $(QUIET) c++
-FLAGS = -Wall -Wextra -Werror -std=c++98
+FLAGS = -Wall -Wextra -Werror -std=c++98 -g3
 
 FILES =		main \
 			
