renamed files to fit subject, improved error management on ex06, fixed a segfault in ex04, add printf of elements to ex02 to fit subject

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -11,7 +11,7 @@ FLAGS = -Wall -Wextra -Werror -std=c++98
 FILES =		main \
 			newZombie \
 			randomChump \
-			class/zombie
+			class/Zombie
 
 SRC_DIR		= 	src/
 SRC_FILES	=	$(addsuffix .cpp, $(FILES))
